--- a/synhai/style.css
+++ b/synhai/style.css
@@ -4,7 +4,7 @@
       box-sizing: border-box;
       font-family: 'Kantumruy Pro', sans-serif;
     }
-    
+    a{color: cyan;text-decoration: none}
     body {
       background-color: #f5f7fa;
       color: #1f2937;
@@ -250,7 +250,7 @@
       align-items: center;
       gap: 5px;
       font-size: 0.9rem;
-      color: #6b7280;
+      color: #1f2937;
     }
     
     .status i {
@@ -351,7 +351,7 @@
     
     .user-message {
       align-self: flex-end;
-      background-color: #2563eb;
+      background-color: #333333;
       color: white;
       border-bottom-right-radius: 4px;
     }
@@ -408,14 +408,17 @@
     
     .typing-dot:nth-child(1) {
       animation-delay: 0s;
+     
     }
     
     .typing-dot:nth-child(2) {
       animation-delay: 0.2s;
+     
     }
     
     .typing-dot:nth-child(3) {
       animation-delay: 0.4s;
+    
     }
     
     @keyframes typingAnimation {
